<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ocm_more_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="54dp"
    >
  <ImageView
      android:id="@+id/ocm_more_logo_image_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="55dp"
      android:src="@drawable/ic_logo_error"
      />


  <LinearLayout
      android:id="@+id/ocm_more_text_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/ocm_more_logo_image_view"
      android:layout_marginTop="30dp"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      >
    <com.gigigo.orchextra.core.sdk.ui.views.textviews.OcmTitleTextView
        android:id="@+id/ocm_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="left"
        android:letterSpacing=".5"
        android:text="@string/error_getting_content_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        />
    <com.gigigo.orchextra.core.sdk.ui.views.textviews.OcmTitleTextView
        android:id="@+id/ocm_empty_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:letterSpacing=".5"
        android:lineSpacingExtra="1dp"
        android:text="@string/error_getting_content_description"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
  </LinearLayout>

  <com.gigigo.orchextra.core.sdk.ui.views.textviews.OcmMediumTextView
      android:id="@+id/ocm_retry_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/ocm_more_text_layout"
      android:gravity="center_horizontal"
      android:padding="@dimen/spacing_16"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center"
      android:layout_marginTop="35dp"
      android:background="@drawable/button_bg_round_white_selector"
      android:text="@string/button_retry"
      android:textAllCaps="true"
      android:textColor="@color/colorPrimary"
      android:textSize="14sp"
      android:layout_marginStart="@dimen/spacing_32"
      android:layout_marginEnd="@dimen/spacing_32"
      />
</RelativeLayout>